network.yml
AWSTemplateFormatVersion: 2010-09-09
Description:
  This template deploys Network stack for Project 2 Udacity

Parameters: 
  ProjectName:
    Type: String
    Description: Project name that will be prefixed to resource names

Resources:

  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Bastion
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0


# Outputs:

#   BastionSG:
#     Description: Security Group for Bastion
#     Value: !Ref BastionSG
#     Export:
#       Name: !Sub ${AWS::StackName}-BastionSG
